--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     <button id="submit" type="button" class="col mt-3 mb-3 ml-2 btn btn-secondary btn-md text-light border border-light">Search</button>
   </div>
 
+  <img class="w-100 homeImage" src="images/vt.jpeg" alt="vt">
+
     <!-- Result container  -->
     <div class="row" id="result"></div>
 
