ready to submit

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body class="container">
     <h1 class="text-center text-info jumbotron myColor">News-API</h1>
-    <!-- <img class="w-25 m-5" src="images/p.png" alt="p"> -->
 
+  <!-- nav -->
     <ul class="nav nav-tabs justify-content-center">
       <li id="about" class="nav-item">
         <a class="nav-link" href="#">About</a>
