--- a/htmls/index.html
+++ b/htmls/index.html
@@ -6,9 +6,45 @@
     <link rel="stylesheet" href="css/style.css">
     <title>VandyFA3.1</title>
   </head>
-  <body>
-    <h1 class="text-center text-info">VandyFA3.1</h1>
-    <img class="w-25 m-5" src="images/p.png" alt="p">
+  <body class="container">
+    <h1 class="text-center text-info jumbotron myColor">News-API</h1>
+    <!-- <img class="w-25 m-5" src="images/p.png" alt="p"> -->
+
+    <ul class="nav nav-tabs justify-content-center">
+      <li id="about" class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li id="news" class="nav-item">
+        <a class="nav-link" href="#">News</a>
+      </li>
+    </ul>
+
+    <!-- endpoints -->
+    <div class="row selects">
+    <select id="endpoints" class="col mt-3 mb-3 bg-success text-white" name="endpoints">
+      <option value="choose">Choose endpoints</option>
+      <option value="top">Top Headlines</option>
+      <option value="everything">Everything</option> -->
+      <option value="sources">Sources</option>
+    </select>
+
+
+    <!-- Country -->
+    <select id="countries" class="col mt-3 mb-3 ml-2 bg-success text-white" name="countries">
+      <option value="choose">Choose Countries</option>
+      <option value="us">United States</option>
+      <option value="canada">Canada</option>
+      <option value="aus">Australia</option>
+    </select>
+
+
+    <button id="submit" type="button" class="col mt-3 mb-3 ml-2 btn btn-secondary btn-md text-light border border-light">Search</button>
+  </div>
+
+  <img class="w-100 homeImage" src="images/vt.jpeg" alt="vt">
+
+    <!-- Result container  -->
+    <div class="row" id="result"></div>
 
 
 
